# tryrabbitmq

./: .gitignore  .project  Makefile.am  README.md  auto_protobuf_form.h  auto_rabbitmq.h  bootstrap  configure.ac  main.cpp  rss.proto
